# qt-cmake-template

./: .clang-format  CMakeLists.txt
include/: device.h  message.h  scanner.h
qml/: main.qml  resource.qrc  resources.qrc
qml/ui/common/: Colors.qml  Fonts.qml  qmldir
qml/ui/pages/: Header.qml
src/: device.cpp  main.cpp  main.qml  scanner.cpp
